--- a/Latex_zuza/boat_interview.tex
+++ b/Latex_zuza/boat_interview.tex
@@ -21,29 +21,25 @@ The boat should be able to transport the lifegourd with the person that needed h
 The project has two components: boat and the wrist band with the button. 
 
 \section{Questions}
-Question 1\\
-Hardware what to use? \\
-- As a supervisor I would say to try to buypass as many things as possible. And make a proof of concept. ESC is a circle to control the motor, specialize controlling unit. ELectronic speed controlling unit.
+\begin{enumerate}
+    \item Hardware what to use?\\
+As a supervisor I would say to try to buypass as many things as possible. And make a proof of concept. ESC is a circle to control the motor, specialize controlling unit. ELectronic speed controlling unit.
 It is a small board, a cirucit. Arduino sends signal to ESC and takes PWM and ...?. We should buy throust draws? 
 Buy waterproof marine components. I would try with simple solution in the begging and make it work. GPS antena. 
 The point is to prove a concept. And you need right battery and that might take time. DO not reenvent the wheel. Figure out first what do u need 
 for direction. Maybe you need a compass. If you are too ambiciuos in the beggining it will not work. RTK GPS - a bit tricky to navigate but gives precision up to 1 cm. Taes time to calibrate 
 usually to half an hour. You might want to navigate where the swimming person is all the time. Make sure that the boat works first. 
 20 m is the precision of a device. \\
-Question 2\\
-Sensors\\
-- It needs to be cheap solution and small. I wouldn't choose camera. Ultrasound and ultrasonic sensors would not work on the sea becuase of the waves etc. 
+    \item Sensors\\
+-It needs to be cheap solution and small. I wouldn't choose camera. Ultrasound and ultrasonic sensors would not work on the sea becuase of the waves etc. 
 In my opinion GPS would be the best options, and the one that willl be compatible with your microcontroller. Work on GPS and make sure that everything is working. 
 And that you do not have to wait one month for the part to come. \\
-Question 3\\
-motors\\
--I recommend to have two motors , becuase it is easier to control and make it work. The difficulty might be to seal the electronics and battery together. \\
-Question 4\\
-cover and materials\\
+    \item motors\\
+I recommend to have two motors , becuase it is easier to control and make it work. The difficulty might be to seal the electronics and battery together. \\
+    \item cover and materials\\
 You need to have nice boxes with clips that you could also combine. \\
-Question 5\\
-signal\\
+    \item signal\\
 DC mounter with arduino. 
-
+\end{enumerate}
 \end{document}
 
