--- a/Latex_zuza/boat_interview.tex
+++ b/Latex_zuza/boat_interview.tex
@@ -4,8 +4,8 @@
 \usepackage{amsfonts, amssymb, amsmath}
 \usepackage{tikz,pgfplots}
 \usepackage{float}
-\title{interview Jarome}
-\author{Zuzanna Parnicka,...,}
+\title{interview with Jerome Jouffroy}
+\author{Zuzanna Parnicka, Hritik Roy Chowdhury, Yiheng Liu, Almuthana Al Moslem, Vojtech Ilcik}
 \date{September 2023}
 
 
@@ -17,28 +17,28 @@
 \maketitle
 \section{Our idea}
 Our idea is that a person is wearing a wrist band. And if its pressed it should send signal to the boat which would follow the signal. 
-The boat should be able to transport the lifegourd with the person that needed help to the shore or help in it. 
+The boat should be able to get to the wrist band location with minimum accuracy dependent on the GPS module. And after getting information of finished action the boat should 
+come back to the shore, the goal is that it comes back to the start point. 
 The project has two components: boat and the wrist band with the button. 
 
-\section{Mentioned topics - the answers are rephrased answers of Jarome....}
+\section{Mentioned topics - the answers are rephrased answers given by Jerome Jouffroy}
 \begin{enumerate}
     \item Tips\\
     As a supervisor I would say to try to buypass as many things as possible. And make a proof of concept. ESC is a circle to control the motor, specialize controlling unit. ELectronic speed controlling unit.
 It is a small board, a cirucit. Buy waterproof marine components. I would try with simple solution in the begging and make it work. The point of the project is to prove a concept and DO not reenvent the wheel. So firstly, make sure that the boat works.
-    \item Hardware what to use?\\
+    \item Hardware\\
 GPS module with antenna.  You need right battery and finding it might take time. Figure out first what do u need 
 for direction. Maybe you need a compass. RTK GPS - a bit tricky to navigate but gives precision up to 1 cm. It takes time to calibrate 
-usually to half an hour. You might want to navigate where the swimming person is all the time. \\
+usually to half an hour. You might want to navigate where the swimming person is all the time. 
     \item Sensors\\
 It needs to be cheap solution and small. I wouldn't choose camera. Ultrasound and ultrasonic sensors would not work on the sea because of the waves etc. 
 In my opinion GPS would be the best option, and the one that will be compatible with your microcontroller. Work on GPS and make sure that everything is working. 
-And what is really important that you do not have to wait one month for the part to come. \\
+And what is really important that you do not have to wait one month for the part to come. 
     \item Motors\\
-I recommend to have two motors, becuase it is easier to control and make it work. \\
-    \item cover and materials\\
-You need to have nice boxes with clips that you could also combine and that are waterproof. The difficulty might be to seal the electronics and battery together.\\
-    \item signal\\
-DC mounter with arduino. 
+I recommend to have two motors, becuase it is easier to control and make it work. 
+    \item Cover and Materials\\
+You need to have nice boxes with clips that you could also combine and that are waterproof. The difficulty might be to seal the electronics and battery together.
+
 \end{enumerate}
 \end{document}
 
