--- a/Latex_zuza/gpsmodule.tex
+++ b/Latex_zuza/gpsmodule.tex
@@ -1,4 +1,5 @@
 \documentclass{article}[10pt]
+\usepackage[utf8]{inputenc}%characters and symbols from different languages
 \usepackage{graphicx} % Required for inserting images
 \usepackage[margin=1in]{geometry}
 \usepackage{amsfonts, amssymb, amsmath}
@@ -6,6 +7,8 @@
 \usepackage{float}
 \usepackage{multirow}
 \usepackage{tabularx}
+\usepackage{hyperref}
+\usepackage{biblatex}% references package
 \title{reasearch on GPS module}
 \author{Zuzanna Parnicka}
 \date{September 2023}
@@ -28,7 +31,9 @@
     \hline
     Type of requirement& specific of the requirement for the project\\
     \hline
-    size&for the wrist band is has to be about 20 mm x 20 mm, for the boat there is no specification\\
+    size wristband & max 30 mm x 30 mm\\
+    \hline 
+    size boat & max 60mm X 60mm\\
     \hline
     update rate&1-10 Hz\\
     \hline
@@ -40,7 +45,7 @@
     \hline
     antenna&best if included\\
     \hline
-    accuracy&the more precise the better, budget is a problem, at least 3 m horizontal accuracy for the prototype\\
+    accuracy&the more precise the better, budget limitation , at least 3 m horizontal accuracy \\
     \hline
     microcontroller compatible with&Arduino\\
     \hline
@@ -56,6 +61,10 @@
     link to the datasheet: \url{https://cdn.sparkfun.com/assets/f/8/d/6/d/ZED-F9P-02B_DataSheet_UBX-21023276.pdf?_gl=1*150sgcj*_ga*MTAxMTI1MDc4OS4xNjgxNzE5OTE5*_ga_T369JS7J9N*MTY5Njg3NjM0Mi40LjEuMTY5Njg3NjU1OS42MC4wLjA}
        
     \item NEO - 6\\
+    Due to its low price relative to the functionalities it offers and compatibility with arduino, 
+    this module is indisputable choice for those who want to learn how GPS works.This module is based on NEO-6M chip from U-blox. 
+    It has a Pover Save Mode that makes it suitable for a wristband locator. It is also the smallest chip amnog the others listed in a  \autoref{tab:Gps modules}
+    It includes antenna with sensitivity patch of 161dBm.
     \item BN-220\\
     The needed requirements are fullfilled despite the price. Which for 1000 krones budget is too high if the shipping price is added.
 link to datasheet: \url{https://files.banggood.com/2016/11/BN-220%20GPS+Antenna%20datasheet.pdf}
@@ -64,6 +73,7 @@ link to datasheet: \url{https://files.banggood.com/2016/11/BN-220%20GPS+Antenna%
 
 \section{Comparison}
 \begin{center}
+    \begin{table}[h!]
     \begin{tabularx}{0.8\textwidth}{
     | >{\centering\arraybackslash}X 
     | >{\centering\arraybackslash}X 
@@ -73,7 +83,7 @@ link to datasheet: \url{https://files.banggood.com/2016/11/BN-220%20GPS+Antenna%
     \hline
     requirement&Spark Fun RTK-SMA&NEO - 6&BN-220 \\
     \hline
-    size&X&&X\\
+    size&X&X&X\\
     \hline
     update rate&X&&X\\
     \hline
@@ -92,6 +102,9 @@ link to datasheet: \url{https://files.banggood.com/2016/11/BN-220%20GPS+Antenna%
     budget&not in the budget&&about 150 krones but expensive shipping\\
     \hline
 \end{tabularx}
+ \caption{GPS modules comparison }
+        \label{tab:Gps modules}
+\end{table}
 \end{center}
 
 
