--- a/Latex_zuza/boat_interview.tex
+++ b/Latex_zuza/boat_interview.tex
@@ -25,7 +25,7 @@ The project has two components: boat and the wrist band with the button.
 \begin{enumerate}
     \item Tips\\
     As a supervisor I would say to try to buypass as many things as possible. And make a proof of concept. ESC is a circle to control the motor, specialize controlling unit. ELectronic speed controlling unit.
-It is a small board, a cirucit. Buy waterproof marine components. I would try with simple solution in the begging and make it work. The point of the project is to prove a concept and DO not reenvent the wheel. So firstly, make sure that the boat works.
+It is a small board, a cirucit. Buy waterproof marine components. I would try with simple solution in the beginning and make it work. The point of the project is to prove a concept and DO not reenvent the wheel. So firstly, make sure that the boat works.
     \item Hardware\\
 GPS module with antenna.  You need right battery and finding it might take time. Figure out first what do u need 
 for direction. Maybe you need a compass. RTK GPS - a bit tricky to navigate but gives precision up to 1 cm. It takes time to calibrate 
