--- a/Latex_zuza/reasearch_on_waterproof_materials.tex
+++ b/Latex_zuza/reasearch_on_waterproof_materials.tex
@@ -4,6 +4,7 @@
 \usepackage{amsfonts, amssymb, amsmath}
 \usepackage{tikz,pgfplots}
 \usepackage{float}
+\usepackage{hyperref}
 \title{reasearch on waterproof materials for boat cover}
 \author{Zuzanna Parnicka}
 \date{September 2023}
@@ -19,30 +20,65 @@
 
 \begin{enumerate}
     \item Paint
-    \begin{enumerate}
-        \item SANI-TRED
-        \begin{enumerate}
-            \item it needs 3 parts/products which are: Permaflex
-            \item Permaflex
-            \begin{enumerate}
-                \item Limitations:
-                \begin{itemize}
-                \item not to be used as a top coating
-                \item never blend water with liquid Permaflex
-                \item never reduce or thin Permaflex with alcohol or any solvent which may contain alcohol
-                \item not to be used for high temperature above 250 F
-                \item high specific gravity, thick, viscous liquid requires great pressure to airless spray @ 70° F. Best rolled and brush applied or sprayed by high volume air-assist type sprayer
-                \end{itemize}    
-            \end{enumerate}
-            \item SANI-TRED LRB
-            \begin{enumerate}
-                \item 
-            \end{enumerate}
-            \item TAV
-        \end{enumerate}
-    \end{enumerate}
-    \item 
-    \item  
+    \item Electronic Epoxy Adhesive Glue
+        \begin{itemize}
+            \item link: \url{https://medium.com/@epoxyglue/everything-you-need-to-know-about-electronic-epoxy-adhesive-glue-e550b5e3b517}
+            \item Does not protect connectors from water.
+            \item Shouldn't be used with high voltage boards.
+            \item Shouldn't be used on pins, switches, buttons that have to be used.
+            \item Components like power transistors, amplifiers etc. may become hot due to being insulated by Epoxy. Which wold effect on them being less affective at dissipating heat, shortening the components life span.
+            \item There are different kinds of Epoxy. Some have metal in them, other ones are thermally conductive.
+            \item Epoxy is setting in about 5 min. Therefore, the apllying procedure has to be fast.
+            \item It is commonly used with silicon. Mostly silicon is put on mouting points or connectors where Eproxy is likely to crack. Also on the buttons.
+            \item It work process is that it is chemically bonding the two parts together. 
+            \item It adhesies to a variety of material,like metals, plastics, ceramics, glass.
+            \item It provides a bond that withstands stress, vibration and shock.
+            \item It is resistant to chemicals, heat, moisture.
+            \item It can be applied to small and large areas
+            \item It has a long curing time, so it might take several hours to fully cure.
+            \item It's not suitable for use on flexible materials.
+            \item The two parts of the adhesive must be mixed in the correct ratio for optimal results.
+            \item It cannot be undone.
+        \end{itemize}
+    \item Silicone
+        \begin{itemize}
+            \item link: \url{https://www.thomasnet.com/articles/chemicals/Silicon-Electronics-Casting-Applications/}
+            \item It can withstand mechanical damage.
+            \item It is messy and hard to use while applying.
+            \item The heat transfer is all right.
+            \item Hides the whole item that is covered by it.
+        \end{itemize}
+    \item Nail polish
+        \begin{itemize}
+            \item Easy to use.
+            \item Work sufficient with small surfaces.
+            \item Not good to use on elastic surfaces.
+            \item Leaves the visibility of the items.
+            \item Costs about 20 krones for a bottle.
+        \end{itemize}
+    \item Polyurethane
+        \begin{itemize}
+            \item Moisture and solvent resistance.
+            \item Class F temp. rating.
+            \item Good dielectric properties.
+            \item Abrasion resistant.
+            \item Flexible.
+            \item Fungicidal.
+            \item It can be done in three ways: dip, spray, brush.
+            \item Single-component urethane coatings are easy to apply; the trade-off, however, is that they have a long cure cycle $($up to several days$)$. Two-component urethane coatings have a shorter cure cycle $($1-3 days$)$ but are more difficult to apply.
+        \end{itemize}
+    \item Acryclic
+        \begin{itemize}
+            \item Quick-drying nature.
+            \item Easy to remove.
+            \item Hihly resistant to humidity.
+            \item Does not give off a lot of heat while it dries and doesn't shrink as it cures.
+        \end{itemize}
+    \item Para-xylylene
+    \item Fluoropolymer
+    \item Waterproof container
+    \item Marine grease
+    \item How to? \url{https://www.nextpcb.com/blog/waterproof-pcb--nextpcb}
 \end{enumerate}
     
 
