added waterproofing methods

--- a/Latex_zuza/reasearch_on_waterproof_materials.tex
+++ b/Latex_zuza/reasearch_on_waterproof_materials.tex
@@ -21,66 +21,81 @@
 \begin{enumerate}
     \item Paint
     \item Electronic Epoxy Adhesive Glue
-        \begin{itemize}
-            \item link: \url{https://medium.com/@epoxyglue/everything-you-need-to-know-about-electronic-epoxy-adhesive-glue-e550b5e3b517}
-            \item Does not protect connectors from water.
-            \item Shouldn't be used with high voltage boards.
-            \item Shouldn't be used on pins, switches, buttons that have to be used.
-            \item Components like power transistors, amplifiers etc. may become hot due to being insulated by Epoxy. Which wold effect on them being less affective at dissipating heat, shortening the components life span.
-            \item There are different kinds of Epoxy. Some have metal in them, other ones are thermally conductive.
-            \item Epoxy is setting in about 5 min. Therefore, the apllying procedure has to be fast.
-            \item It is commonly used with silicon. Mostly silicon is put on mouting points or connectors where Eproxy is likely to crack. Also on the buttons.
-            \item It work process is that it is chemically bonding the two parts together. 
-            \item It adhesies to a variety of material,like metals, plastics, ceramics, glass.
-            \item It provides a bond that withstands stress, vibration and shock.
-            \item It is resistant to chemicals, heat, moisture.
-            \item It can be applied to small and large areas
-            \item It has a long curing time, so it might take several hours to fully cure.
-            \item It's not suitable for use on flexible materials.
-            \item The two parts of the adhesive must be mixed in the correct ratio for optimal results.
-            \item It cannot be undone.
-        \end{itemize}
+          \begin{itemize}
+              \item link: \url{https://medium.com/@epoxyglue/everything-you-need-to-know-about-electronic-epoxy-adhesive-glue-e550b5e3b517}
+              \item Does not protect connectors from water.
+              \item Shouldn't be used with high voltage boards.
+              \item Shouldn't be used on pins, switches, buttons that have to be used.
+              \item Components like power transistors, amplifiers etc. may become hot due to being insulated by Epoxy. Which wold effect on them being less affective at dissipating heat, shortening the components life span.
+              \item There are different kinds of Epoxy. Some have metal in them, other ones are thermally conductive.
+              \item Epoxy is setting in about 5 min. Therefore, the apllying procedure has to be fast.
+              \item It is commonly used with silicon. Mostly silicon is put on mouting points or connectors where Eproxy is likely to crack. Also on the buttons.
+              \item It work process is that it is chemically bonding the two parts together.
+              \item It adhesies to a variety of material,like metals, plastics, ceramics, glass.
+              \item It provides a bond that withstands stress, vibration and shock.
+              \item It is resistant to chemicals, heat, moisture.
+              \item It can be applied to small and large areas
+              \item It has a long curing time, so it might take several hours to fully cure.
+              \item It's not suitable for use on flexible materials.
+              \item The two parts of the adhesive must be mixed in the correct ratio for optimal results.
+              \item It cannot be undone.
+          \end{itemize}
     \item Silicone
-        \begin{itemize}
-            \item link: \url{https://www.thomasnet.com/articles/chemicals/Silicon-Electronics-Casting-Applications/}
-            \item It can withstand mechanical damage.
-            \item It is messy and hard to use while applying.
-            \item The heat transfer is all right.
-            \item Hides the whole item that is covered by it.
-        \end{itemize}
+          \begin{itemize}
+              \item link: \url{https://www.thomasnet.com/articles/chemicals/Silicon-Electronics-Casting-Applications/}
+              \item It can withstand mechanical damage.
+              \item It is messy and hard to use while applying.
+              \item The heat transfer is all right.
+              \item Hides the whole item that is covered by it.
+          \end{itemize}
     \item Nail polish
-        \begin{itemize}
-            \item Easy to use.
-            \item Work sufficient with small surfaces.
-            \item Not good to use on elastic surfaces.
-            \item Leaves the visibility of the items.
-            \item Costs about 20 krones for a bottle.
-        \end{itemize}
+          \begin{itemize}
+              \item Easy to use.
+              \item Work sufficient with small surfaces.
+              \item Not good to use on elastic surfaces.
+              \item Leaves the visibility of the items.
+              \item Costs about 20 krones for a bottle.
+          \end{itemize}
     \item Polyurethane
-        \begin{itemize}
-            \item Moisture and solvent resistance.
-            \item Class F temp. rating.
-            \item Good dielectric properties.
-            \item Abrasion resistant.
-            \item Flexible.
-            \item Fungicidal.
-            \item It can be done in three ways: dip, spray, brush.
-            \item Single-component urethane coatings are easy to apply; the trade-off, however, is that they have a long cure cycle $($up to several days$)$. Two-component urethane coatings have a shorter cure cycle $($1-3 days$)$ but are more difficult to apply.
-        \end{itemize}
+          \begin{itemize}
+              \item Moisture and solvent resistance.
+              \item Class F temp. rating.
+              \item Good dielectric properties.
+              \item Abrasion resistant.
+              \item Flexible.
+              \item Fungicidal.
+              \item It can be done in three ways: dip, spray, brush.
+              \item Single-component urethane coatings are easy to apply; the trade-off, however, is that they have a long cure cycle $($up to several days$)$. Two-component urethane coatings have a shorter cure cycle $($1-3 days$)$ but are more difficult to apply.
+          \end{itemize}
     \item Acryclic
-        \begin{itemize}
-            \item Quick-drying nature.
-            \item Easy to remove.
-            \item Hihly resistant to humidity.
-            \item Does not give off a lot of heat while it dries and doesn't shrink as it cures.
-        \end{itemize}
+          \begin{itemize}
+              \item Quick-drying nature.
+              \item Easy to remove.
+              \item Hihly resistant to humidity.
+              \item Does not give off a lot of heat while it dries and doesn't shrink as it cures.
+          \end{itemize}
     \item Para-xylylene
+          \begin{itemize}
+              \item Or Parylene, a chemical coating done by Chemical Vapor Deposition (CVD) in an atmosphere of Para-xylylene or its derivative. The thin film is generated by the chemical vapor adhering to the part to be coated and polymerized at a threshold temperature of 700C. Within the referenced text, the CVD process is described as followed:
+              \item The part is placed inside a container that allows easy access for possible adjustments and retrievals. Temperature probes need to be placed in more than one location inside the reaction chamber to measure and model the temperature and pressure gradient to ensure homogeneous temperature and pressure distribution along the part. This is done to ensure an even coating of material and the eventual polymerization of the final coating. Polymerization can happen at different temperatures depending on n the technique, but the chamber needs to be able to achieve a maximum temperature of 700 degrees. Due to the corrosive properties of the precursor vapor, the chamber needs to be lined with quartz, so that the usual stainless-steel chamber stays intact. The recommended shape for the chamber is a bell-shaped chamber, of relatively small size to ensure isothermal and isobaric internal properties.
+              \item While being extremely interesting and possessing highly robust properties such as anti-abrasion, beyond the waterproofing abilities, the method is too expensive and complex for our current project.
+
+          \end{itemize}
     \item Fluoropolymer
+          \begin{itemize}
+              \item Similar to the previous method, Fluoropolymers are generally applied as a coating. Some of the more commonly known applications of Fluoropolymers are cookware and clothes, and one of its most known varieties is Teflon. Due to the complexity of application and difficulty acquiring the correct chemical for the project’s purposes, the option is eliminated.
+          \end{itemize}
     \item Waterproof container
-    \item Marine grease
+          \begin{itemize}
+              \item As a secondary waterproofing measure, a waterproof container is an excellent form of waterproofing, being both inexpensive and easy to modify. The setup is easily sealed and unsealed and provide many configurations options.
+          \end{itemize}
+    \item Marine grease 
+    \begin{itemize}
+        \item Marine grease, like other grease, are used for their adhesive properties as well as their ability to lubricate moving machineries. In this application, the adhesive property of grease is needed, but not its ability to lubricate mechanical components, since the only moving components will be the two already lubricated motors. In addition, Marine grease is hard to work with and increases difficulty to modify and repair the project.
+    \end{itemize}
     \item How to? \url{https://www.nextpcb.com/blog/waterproof-pcb--nextpcb}
 \end{enumerate}
-    
+
 
 \end{document}
 
