--- a/Latex_zuza/reasearch_on_waterproof_materials.tex
+++ b/Latex_zuza/reasearch_on_waterproof_materials.tex
@@ -6,8 +6,8 @@
 \usepackage{float}
 \usepackage{hyperref}
 \title{reasearch on waterproof materials for boat cover}
-\author{Zuzanna Parnicka}
-\date{September 2023}
+\author{Zuzanna Parnicka, Yiheng Liu}
+\date{October 2023}
 
 
 \begin{document}
