--- a/Latex_zuza/user_requirements.tex
+++ b/Latex_zuza/user_requirements.tex
@@ -23,17 +23,17 @@
             Yes$\backslash$No
     \item Shape: (single choice)
     \begin{enumerate}
-        \item  The person should be able to grab on it, similar to safety ring.\\
-        \item  The person should be able to grab on it and lay on it, like a stretcher.\\
+        \item  The person should be able to grab on it, similar to safety ring.
+        \item  The person should be able to grab on it and lay on it, like a stretcher.
         \item  Other:
     \end{enumerate}
     \item Accesories: (multiple choice)
     \begin{enumerate}
-        \item Camera - documet the mission\\
-        \item Warning lights\\
-        \item First aid kit\\
-        \item Warning sound\\
-        \item Showing temperature of water\\
+        \item Camera - documet the mission
+        \item Warning lights
+        \item First aid kit
+        \item Warning sound
+        \item Showing temperature of water
         \item Other:
     \end{enumerate}
     \item Is it important that the boat/buoy is helping the lifeguard to get to the person?\\
@@ -47,30 +47,30 @@
             \newpage
     \item From your experience what is the average distance [m] from shore to the victim? (multiple choice) 
     \begin{enumerate}    
-        \item  100\\
-        \item  200\\
-        \item  300\\
-        \item  400\\
-        \item  500\\
+        \item  100
+        \item  200
+        \item  300
+        \item  400
+        \item  500
         \item  Other:
         \end{enumerate}
     \item What is the maximum time [min] in which the lifeguard should get to the drawning person so the suferer can be saved in order to survive? (multiple choice)
     \begin{enumerate}        
-        \item   1\\
-        \item   2\\
-        \item   3\\
-        \item   4\\
-        \item   5\\
-        \item   more than 5\\
+        \item   1
+        \item   2
+        \item   3
+        \item   4
+        \item   5
+        \item   More than 5
         \item   Other:
     \end{enumerate}
     \item What is the biggest distance [m] from the shore that the suferer is saved at?\\
             Written answer by interviewee.
     \item What was the longest time [min] it took you to complete a rescue (time spent in water)? (multiple choice)
     \begin{enumerate}
-        \item  Up to 10.\\
-        \item  Up to 20.\\
-        \item  Up to 40.\\
+        \item  Up to 10
+        \item  Up to 20
+        \item  Up to 40
         \item  Other:
     \end{enumerate}
     \item Other suggestions and features that you would like to have on your autonomous assistant.\\
