--- a/Latex_zuza/user_requirements.tex
+++ b/Latex_zuza/user_requirements.tex
@@ -14,80 +14,92 @@
 \maketitle
 
 \section*{Form questions and answers given by interviewees}
+The form was sent to lifeguards from Denmark and Poland. It was filled out by 5 people.
 \begin{enumerate}
-    
-   
     \item The autonomous assistance boat can be a helpful tool for saving people overboard.\\
-            Yes$\backslash$No
+            Yes (100\%)\\
+            No (0\%)
     \item The autonomous assistance boat can be a helpful tool for a lifeguard.\\
-            Yes$\backslash$No
+        Yes (100\%)\\
+        No (0\%)
     \item Shape: (single choice)
     \begin{enumerate}
-        \item  The person should be able to grab on it, similar to safety ring.
-        \item  The person should be able to grab on it and lay on it, like a stretcher.
-        \item  Other:
+        \item  The person should be able to grab on it, similar to safety ring. (20\%)
+        \item  The person should be able to grab on it and lay on it, like a stretcher. (80\%)
+        \item  There should be a platform on a boat, that allows the lifeguard to start saving the sufferer after getting to them on the water. (20\%)
     \end{enumerate}
     \item Accesories: (multiple choice)
     \begin{enumerate}
-        \item Camera - documet the mission
-        \item Warning lights
-        \item First aid kit
-        \item Warning sound
-        \item Showing temperature of water
-        \item Other:
+        \item Camera - documet the mission (20\%)
+        \item Warning lights (100\%)
+        \item First aid kit (40\%)
+        \item Warning sound (80\%)
+        \item Showing temperature of water (0\%)
+        \item 5-min oxygen bottle (40\%)
     \end{enumerate}
     \item Is it important that the boat/buoy is helping the lifeguard to get to the person?\\
-            Yes$\backslash$No
+                Yes (100\%)\\
+                No (0\%)
     \item Does it make sense that there will be something that holds the lifeguard to the boat so he can take care of the drowning person during coming back to the shore?\\
-            Yes$\backslash$No
+                Yes (100\%)\\
+                No (0\%)
     \item Does the colour of the boat matter?\\
-            Yes$\backslash$No
+                Yes (60\%)\\
+                No (40\%)
     \item If the colour matters, what colour should it be? (Specify if required by law)\\
-            Written answer by interviewee.
+            Written answer by interviewees:
+            \begin{enumerate}
+                \item Bright, regulated by rules for coutry's regulations.
+                \item Bright, visible, red would be the best.
+                \item Bright, fluorescent.
+            \end{enumerate} 
             \newpage
     \item From your experience what is the average distance [m] from shore to the victim? (multiple choice) 
     \begin{enumerate}    
-        \item  100
-        \item  200
-        \item  300
-        \item  400
-        \item  500
-        \item  Other:
+        \item  100 (75\%)
+        \item  200 (25\%)
+        \item  300 (0\%)
+        \item  400 (0\%)
+        \item  500 (0\%)
+        \item  Other: (0\%)
         \end{enumerate}
     \item What is the maximum time [min] in which the lifeguard should get to the drawning person so the suferer can be saved in order to survive? (multiple choice)
     \begin{enumerate}        
-        \item   1
-        \item   2
-        \item   3
-        \item   4
-        \item   5
-        \item   More than 5
-        \item   Other:
+        \item   1 (0\%)
+        \item   2 (20\%)
+        \item   3 (20\%)
+        \item   4 (20\%)
+        \item   5 (20\%)
+        \item   6
+        \item   More than 6 (20\%)
     \end{enumerate}
     \item What is the biggest distance [m] from the shore that the suferer is saved at?\\
-            Written answer by interviewee.
+            Written answer by interviewees:
+            \begin{enumerate}
+                \item It depends on the time of apnoea, not the distance.
+                \item 90.
+            \end{enumerate} 
     \item What was the longest time [min] it took you to complete a rescue (time spent in water)? (multiple choice)
     \begin{enumerate}
-        \item  Up to 10
-        \item  Up to 20
-        \item  Up to 40
-        \item  Other:
+        \item  Up to 10 (40\%)
+        \item  Up to 20 (40\%)
+        \item  Up to 40 (20\%)
     \end{enumerate}
     \item Other suggestions and features that you would like to have on your autonomous assistant.\\
-            Written answer by interviewee.     
+           No given answer by interviewees.     
 \end{enumerate}
 
 \section*{Conclusion}
 The sum up of the user input gives the feedback of the fact that the autonomous life saver boat can be useful project used in real life. The interviewees answers conclude to mentioned below user requirements. The ones with the star are "need to have" the other ones are "nice to have".
 \begin{itemize}
-     \item Shape of the boat:
-     \item Accesories of the boat:
+     \item Shape of the boat: the person should be able to grab on it and lay on it, like a stretcher.
+     \item Accesories of the boat: camera - documet the mission, warning lights, first aid kit, warning sound, 5-min oxygen bottle.
      \item Help with getting to the drwoning person.
      \item Holder to the boat for the lifeguard.
-     \item Colour of the boat: bright, consistent with Denmark's law. Even thought the answers are not clear-cut for the unimportance of the colour, looking at the law regualtions and visiblness on the water it is good to have a bright, clearly visible colour.
+     \item Colour of the boat: bright, clearly visible colour, regulated by country's regulations.
      \item The boat should be able to achive at least 200 m distance from the shore.
-     \item The logest time of getting to the drowning person should not go beyond
-     \item The longest time the boat should be able to work on the water without recharging should total
+     \item The logest time of getting to the drowning person should not go beyond more than 6 min.
+     \item The longest time the boat should be able to work on the water without recharging should total 30 min.
 \end{itemize}
 
 \end{document}
