--- a/Latex_zuza/user_requirements.tex
+++ b/Latex_zuza/user_requirements.tex
@@ -86,7 +86,7 @@ The form was sent to lifeguards from Denmark and Poland. It was filled out by 5 
         \item  Up to 40 (20\%)
     \end{enumerate}
     \item Other suggestions and features that you would like to have on your autonomous assistant.\\
-           No given answer by interviewees.     
+           No given answers by interviewees.     
 \end{enumerate}
 
 \section*{Conclusion}
