Creating one document for report

--- a/Latex_zuza/Introduction.tex
+++ b/Latex_zuza/Introduction.tex
@@ -4,7 +4,7 @@
 A brainstorming chart was created to get an insight into each idea suggest for evaluation.
 15 ideas were listed and described buy these categories: mechanical challenges, electronics challenges, 
 software challeges, components, potential market, cost, machine learning, sponsorship potential, user safety.
-Each cathegory consisted from 1 to 5 informations. 
+Each cathegory consisted from 1 to 5 informations.
 
 
 \begin{table}[h!]
@@ -75,6 +75,43 @@ Hover Ark H3 & 1030x630x20 & 13.8 &  & 45min@18 & 200 & RC+autoreturn  \\
 After the investigation was concluded that all of the products has to be navigated by person to the victim. 
 Only Hover ark is capable of an automatic return. Therefore there is a space for extended functionality of navigation to the victim or to a lifeguard as an assistance. 
 \ref{tab:Preliminary_ideas}
+\section{Product requirements}
+After evaluation of user requirements , university requirements, given time and budget, project requirements were created and divided 
+into 2 groups. Need to have requirements are formulated in a way that the final product should be a fully working downscaled prototype. 
+They are giving detailed insight into the techical characteristics and functionality. Nice to 
+have requirements are decribing the full scale prototype with extensions that fulfills all the user requirements.
+\subsection{Need to have requirements}
+\begin {itemize}
+\item Body shape 
+    \begin {itemize}
+    \item Should contain a stretcher bed between the two kiels. 
+    Reason: help the lifeguard wit the transportation
+    \item Should have 2 handles on the back and 1 on each side.
+    Reason:useful when loading person and serving as buoy 
+    \item Should be painted in a bright visible colour regulated by the law.
+    Reson: better visibility and law restrictions
+    \item 
+    \end {itemize}
+\end {itemize}
+\begin {itemize}
+\item Speed and endurance 
+    \begin {itemize}
+    \item Minimum speed to the person should be 1.1 m/s
+    \item Should be able to run for 10 minutes withou recharging
+    \item Should be able to carry 20kg load on the way back
+    \end {itemize}
+\begin 
+\begin {itemize}
+\item Navigation 
+    \begin {itemize}
+    \item Should use a gps with presision of 3 m 
+    \item Should be able to receive signal in range of 200 m
+    \item Should have a compass to determine the orientation 
+    \item Should contain a 
+    \end {itemize}
+\end {itemize}
+
+\end {itemize}
 
 \section{Working cycle description}
 
